--- a/home.html
+++ b/home.html
@@ -69,6 +69,15 @@
             />. We hope our shop adds a unique and intresting place to our
             little town.
           </p>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/exYTGsxZuSg"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
 
         <section>
