--- a/contact.html
+++ b/contact.html
@@ -7,78 +7,37 @@
     <title>The Little Taco Shop</title>
     <link rel="icon" href="./Icon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./CSS/style.css" type="text/css" />
+    <script src="js/main.js" defer></script>
   </head>
   <body>
-    <header>
-      <h1>Contact Us</h1>
+    <header class="header">
+      <h1 class="header__h1">Contact LTS</h1>
 
-      <nav aria-label="primary-navigation">
-        <ul>
-          <li><a href="./home.html">Home</a></li>
-          <li><a href="./home.html#about">About LTS</a></li>
-          <li><a href="./home.html#menu">Our Menu</a></li>
-          <li><a href="./hours.html#timings">Store Hours</a></li>
+      <nav aria-label="primary-navigation" class="header__nav">
+        <ul class="header__ul">
+          <li><a href="/">Home</a></li>
+          <li><a href="/#menu"> Menu</a></li>
+          <li><a href="hours.html"> Hours</a></li>
+          <li><a href="about.html">About </a></li>
         </ul>
       </nav>
     </header>
-    <main>
-      <div>
-        <figure>
-          <img
-            src="./img/tacos_close_up_400x260.png"
-            alt="tacos closeup"
-            title="Tacos Closeup"
-            width="400"
-            height="260"
-          />
-          <figcaption>Little Taco Shop Tacos</figcaption>
-        </figure>
-      </div>
-      <article id="form">
-        <h2>Our Contact Form</h2>
-        <form action="https://httpbin.org/get" method="get">
-          <fieldset>
-            <legend>Send Us A Message</legend>
-            <p>
-              <label>Name:</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                placeholder="your name"
-                autocomplete="on"
-                required
-              />
-            </p>
-            <p>
-              <label>Email:</label>
-              <input
-                type="email"
-                name="email"
-                id="email"
-                placeholder="your email"
-                autocomplete="on"
-                required
-              />
-            </p>
-            <p>
-              <label for="message">Your Message:</label>
-              <br />
-              <textarea
-                name="message"
-                id="message"
-                cols="30"
-                rows="10"
-                placeholder="Type your message here"
-              ></textarea>
-            </p>
-          </fieldset>
 
-          <button type="submit">Send</button>
-          <button type="reset">Reset</button>
-        </form>
-      </article>
-      <section>
+    <section class="hero">
+      <figure>
+        <img
+          src="./img/tacos_close_up_1000x649.png"
+          alt="tacos closeup"
+          title="Tacos Closeup"
+          width="1000"
+          height="649"
+        />
+        <figcaption class="offscreen">Little Taco Shop Tacos</figcaption>
+      </figure>
+    </section>
+
+    <main class="main">
+      <article class="main_-article">
         <h2>Our Location</h2>
         <address>
           555 Taco Temptation Lane, Suite T<br />
@@ -91,11 +50,65 @@
         <p>
           <a href="#">Back to Top</a>
         </p>
-      </section>
-    </main>
-    <footer>
+      </article>
       <hr />
-      <span>Copyright</span> &copy;<span> The Little Taco Shop</span>
+      <article class="main_-article contact">
+        <h2 class="contact__h2">Our Contact Form</h2>
+        <form
+          action="https://httpbin.org/get"
+          method="get"
+          class="contact__form"
+        >
+          <fieldset class="contact__fieldset">
+            <legend class="offscreen">Send Us A Message</legend>
+            <p class="contact__p">
+              <label class="contact__label">Name:</label>
+              <input
+                class="contact__input"
+                type="text"
+                name="name"
+                id="name"
+                placeholder="your name"
+                autocomplete="on"
+                required
+              />
+            </p>
+            <p class="contact__p">
+              <label class="contact__label">Email:</label>
+              <input
+                class="contact__input"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="your email"
+                autocomplete="on"
+                required
+              />
+            </p>
+            <p class="contact__p">
+              <label class="contact__label" for="message">Your Message:</label>
+              <br />
+              <textarea
+                class="contact__textarea"
+                name="message"
+                id="message"
+                cols="30"
+                rows="10"
+                placeholder="Type your message here"
+              ></textarea>
+            </p>
+          </fieldset>
+
+          <button class="contact__button" type="submit">Send</button>
+          <button class="contact__button" type="reset">Reset</button>
+        </form>
+      </article>
+    </main>
+    <footer class="footer">
+      <p>
+        <span class="nowrap">Copyright &copy; <time id="year"></time></span>
+        <span class="nowrap">The Little Taco Shop</span>
+      </p>
     </footer>
   </body>
 </html>
